# schegent-AIagent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/graph/: planner_agent.py
agents/tool/Data/: events.py  get_habits.py  receive_questions.py
agents/tool/accept_unaccept/: accept.py  unaccept.py
agents/tool/agent_schedule/: create_new_task.py  create_schedule.py  update_schedule.py
agents/tool/common/: classify_messages.py  router_agent.py
agents/tool/interface/: index.py
agents/tool/rag/: emberding_habit.py  query_habit.py
config/: convert_json.py  database.py  llm.py
faiss_index/: index.faiss  index.pkl
router/: router.py
